--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "NDc4NTYxNDg5OTUxOTE2MDM0.Xj3YUg.MA9MmE5spOiyrP5fNR8D9br-nSg",
+  "token": "Njg3MjY2NjA1NDM2MTA4ODAw.XmjRfg.GZoiH_bDKd0_qZqGwqsBk23Csu4",
   "prefix": "mass!",
   "id": "180449801400352768",
   "wait": "10"
